--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Spotify Project 2</h1>
+    <h1>Spotify Project</h1>
 </body>
 </html>
