--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
-    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Spotify Project</h1>
+    
+    <nav>
+        <ul>
+            <li><img src="" alt="spotify logo"></li>
+            <li>Spotify</li>
+            <li>Favourites</li>
+        </ul>
+
+        <ul>
+            <li><input type="text" name="search" id="search" placeholder="Search..."></li>
+            <li>bell icon</li>
+            <li><img src="" alt="profileIcon"></li>
+        </ul>
+
+    </nav>
+    
 </body>
 </html>
