--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <nav>
         <ul>
-            <li><img src="" alt="spotify logo"></li>
+            <li><img src="" alt="Spotify logo"></li>
             <li>Spotify</li>
             <li>Favourites</li>
         </ul>
