--- a/index.html
+++ b/index.html
@@ -4,23 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
     <nav>
         <ul>
-            <li><img src="" alt="Spotify logo"></li>
-            <li>Spotify</li>
-            <li>Favourites</li>
+            <li><img src="./images/logo.png" class="logo" alt="Spotify logo"></li>
+            <li id="website_name">Spotify</li>
+            <li id="favourites">Favourites</li>
         </ul>
-
         <ul>
             <li><input type="text" name="search" id="search" placeholder="Search..."></li>
-            <li>bell icon</li>
-            <li><img src="" alt="profileIcon"></li>
+            <li><img src="./images/notification.png" class="bell"  alt="bell icon"></li>
+            <li><img src="./images/dp.png" class="profileIcon" alt="profileIcon"></li>
         </ul>
 
     </nav>
+
+    <section class="main_section">
+        <section>
+            <img src="./images/posters/8.jpg" alt="" class="img_preview">
+            <img src="./images/posters/6.jpg" alt="" class="img_preview">
+            <img src="./images/posters/11.jpg" alt="" class="img_preview">
+        </section>
+
+        <section>
+
+        </section>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
 </body>
 </html>
