working on queue list

--- a/index.html
+++ b/index.html
@@ -22,16 +22,33 @@
 
     </nav>
 
-    <section class="main_section">
-        <section>
-            <img src="./images/posters/8.jpg" alt="" class="img_preview">
-            <img src="./images/posters/6.jpg" alt="" class="img_preview">
-            <img src="./images/posters/11.jpg" alt="" class="img_preview">
-        </section>
+    <section>
+        <div>
+            <ul>
+                <li>
+                    <img src="./images/posters/8.jpg" alt="" class="img_preview">
+                    <img src="./images/posters/6.jpg" alt="" class="img_preview">
+                    <img src="./images/posters/11.jpg" alt="" class="img_preview">
+                </li>
+            </ul>
+        </div>
 
-        <section>
+        <div>
+            <div>
+                <h3>Queue</h3>
+                <select>
+                    <option>Queue</option>
+                    <option>Queue</option>
+                    <option>Queue</option>
+                </select>
+            </div>
 
-        </section>
+                <li>
+                    <p>01</p>
+                    <img src="./images/posters/12.jpg" alt="" class="queue_img_preview">
+                </li>
+
+        </div>
     </section>
 
 
