working on latest release

--- a/index.html
+++ b/index.html
@@ -49,35 +49,48 @@
                             <p>3:50</p>
                         </li>
                     </ul>
-                    
-                </div>
-                <div>
+
                     <ul>
                         <li>
-                            <img src="./images/posters/13.jpg" alt="" class="queue_img_preview">                            
+                            <img src="./images/posters/14.jpg" alt="" class="queue_img_preview">                            
                         </li>
                         <li>
                             <p>Dreams</p>
                             <p>December 11, 2023</p>
                         </li>
                         <li>
-                            <p>...</p>
+                            <b>...</b>
                             <p>3:50</p>
                         </li>
                     </ul>
                     
                 </div>
+
                 <div>
                     <ul>
                         <li>
-                            <img src="./images/posters/13.jpg" alt="" class="queue_img_preview">                            
+                            <img src="./images/posters/15.jpg" alt="" class="queue_img_preview">                            
                         </li>
                         <li>
                             <p>Dreams</p>
                             <p>December 11, 2023</p>
                         </li>
                         <li>
-                            <p>...</p>
+                            <b>...</b>
+                            <p>3:50</p>
+                        </li>
+                    </ul>
+
+                    <ul>
+                        <li>
+                            <img src="./images/posters/16.jpg" alt="" class="queue_img_preview">                            
+                        </li>
+                        <li>
+                            <p>Dreams</p>
+                            <p>December 11, 2023</p>
+                        </li>
+                        <li>
+                            <b>...</b>
                             <p>3:50</p>
                         </li>
                     </ul>
